# gkm-ship-cad

./: CMakeLists.txt  README.md
include/: main_window.h  main_window.ui  view_3d_widget.h
include/gkm_solid/: gkm_solid.h  gkm_visualizer.h
source/: main.cpp  main_window.cpp  view_3d_widget.cpp
source/gkm_solid/: gkm_solid.cpp  gkm_visualizer.cpp
